--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apollo-server-fastify": "^2.8.1",
     "graphql": "^14.4.2",
     "graphql-tools": "^4.0.5",
+    "mongoose": "^5.6.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.2"
@@ -36,6 +37,7 @@
     "@nestjs/testing": "^6.5.3",
     "@types/express": "4.17.0",
     "@types/jest": "24.0.17",
+    "@types/mongoose": "^5.5.12",
     "@types/node": "12.7.2",
     "@types/supertest": "2.0.8",
     "jest": "24.8.0",
