--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-fastify": "^6.5.3",
     "apollo-server-express": "^2.8.1",
     "apollo-server-fastify": "^2.8.1",
+    "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
     "graphql-tools": "^4.0.5",
     "mongoose": "^5.6.9",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.5.3",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "4.17.0",
     "@types/jest": "24.0.17",
     "@types/mongoose": "^5.5.12",
