--- a/package.json
+++ b/package.json
@@ -16,41 +16,41 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles "
   },
   "dependencies": {
-    "@nestjs/common": "^6.6.4",
-    "@nestjs/core": "^6.6.4",
-    "@nestjs/graphql": "^6.5.0",
-    "@nestjs/platform-express": "^6.6.4",
-    "@nestjs/platform-fastify": "^6.6.4",
+    "@nestjs/common": "^6.7.2",
+    "@nestjs/core": "^6.7.2",
+    "@nestjs/graphql": "^6.5.1",
+    "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/platform-fastify": "^6.7.2",
     "apollo-server-express": "^2.9.3",
     "apollo-server-fastify": "^2.9.3",
     "dotenv": "^8.1.0",
-    "graphql": "^14.5.4",
+    "graphql": "^14.5.7",
     "graphql-tools": "^4.0.5",
-    "mongoose": "^5.6.11",
+    "mongoose": "^5.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.2"
+    "rxjs": "^6.5.3"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.6.4",
+    "@nestjs/testing": "^6.7.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "4.17.1",
     "@types/jest": "24.0.18",
-    "@types/mongoose": "^5.5.16",
-    "@types/node": "12.7.3",
+    "@types/mongoose": "^5.5.17",
+    "@types/node": "12.7.5",
     "@types/supertest": "2.0.8",
     "jest": "24.9.0",
     "prettier": "1.18.2",
     "supertest": "4.0.2",
-    "ts-jest": "24.0.2",
-    "ts-node": "8.3.0",
-    "tsc-watch": "2.4.0",
-    "tsconfig-paths": "3.8.0",
-    "tslint": "5.19.0",
-    "typescript": "3.6.2"
+    "ts-jest": "24.1.0",
+    "ts-node": "8.4.1",
+    "tsc-watch": "4.0.0",
+    "tsconfig-paths": "3.9.0",
+    "tslint": "5.20.0",
+    "typescript": "3.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
