--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-﻿PORT=3333
+﻿SERVER=http://localhost
+PORT=3333
+MONGO_URI='mongodb://localhost/nest-fastify-graphql-mongodb'
+GRAPHQL_PLAYGROUND=true
